data/forge_javadoc/1.8.9/raw/net/minecraft/client/model/ModelVillager.md
---
title: "ModelVillager"
description: "public class ModelVillager extends ModelBase"
package: "net/minecraft/client/model"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/model/ModelVillager.html"
sourceType: javadoc
---

# ModelVillager

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelVillager

## Class signature

```java
public class ModelVillager extends ModelBase
```

## Constructors

- `ModelVillager(float p_i1163_1_)`
- `ModelVillager(float p_i1164_1_, float p_i1164_2_, int p_i1164_3_, int p_i1164_4_)`

## Methods

- `void render(Entity entityIn, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float scale)` — Sets the models various rotation angles then renders the model.
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity entityIn)` — Sets the model's various rotation angles.

## Fields

- `ModelRenderer leftVillagerLeg` — The left leg of the VillagerModel
- `ModelRenderer rightVillagerLeg` — The right leg of the VillagerModel
- `ModelRenderer villagerArms` — The arms of the VillagerModel
- `ModelRenderer villagerBody` — The body of the VillagerModel
- `ModelRenderer villagerHead` — The head box of the VillagerModel
- `ModelRenderer villagerNose`
